recursion.cons.reverse.Reverse.scala.error
Erreur de compilation :
Reverse:11: error: too many arguments for method reverse: (l: List[Int])List[Int]
  return reverse(l,l.head)
                ^